# PLVISION_simple_project_task

./: Makefile.am  README.md  configure.ac  setup_project_build.sh
src/: functions.c  functions.h  main.c
